grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lke-monitor-grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/instance: lke-monitor
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
