monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.trebinje.online
    - prometheus.trebinje.online
    - alertmanager.trebinje.online
    - loki.trebinje.online
    secretName: lke-monitor-tls
  rules:
  - host: grafana.trebinje.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  - host: prometheus.trebinje.online
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: lke-monitor-kube-prometheu-prometheus
            port:
              number: 9090
  - host: alertmanager.trebinje.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lke-monitor-kube-prometheu-alertmanager
            port:
              number: 9093
  - host: loki.trebinje.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki
            port:
              number: 3100
